--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,7 @@ ipython_config.py
 #   in version control.
 #   https://pdm.fming.dev/#use-with-ide
 .pdm.toml
+.pdm-python
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
@@ -157,4 +158,21 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+
+# VsCode
+.vscode/
+
+# logs
+/*logs/
+# logs soft link
+/*logs 
+
+# dataset
+/dataset/
+# dataset soft link
+/dataset
+
+# experiments
+test*.yaml
+/test_*/
