--- a/exps/cgan/fashionmnist.yaml
+++ b/exps/cgan/fashionmnist.yaml
@@ -25,8 +25,8 @@ trainer:
     class_path: pytorchlab.callbacks.gan.ConditionalGANCallback
     init_args:
       latent_dim: 100
-      nums: 5
       num_classes: 10
+      nums: 5
       tag: null
       override: false
       nrow: 5
@@ -90,6 +90,8 @@ data:
 model:
   class_path: pytorchlab.models.cgan.CGAN
   init_args:
+    latent_dim: 100
+    num_classes: 10
     generator:
       class_path: pytorchlab.modules.gans.generator.linear.ConditionalLinearGenerator
       init_args:
@@ -158,7 +160,7 @@ model:
         - 0.999
         eps: 1.0e-08
         weight_decay: 0.0
-        amsgrad: falses
+        amsgrad: false
         foreach: null
         maximize: false
         capturable: false
