--- a/config/unet/ISBI2012.yaml
+++ b/config/unet/ISBI2012.yaml
@@ -10,7 +10,7 @@ trainer:
     class_path: lightning.pytorch.loggers.TensorBoardLogger
     init_args:
       save_dir: logs/unet
-      name: birds&insects
+      name: ISBI2012
       version: null
       log_graph: false
       default_hp_metric: true
@@ -41,9 +41,10 @@ trainer:
       value_range: null
       scale_each: false
       pad_value: 0.0
-  - class_path: pytorchlab.callbacks.MetricsSegmentationCallback
+  - class_path: pytorchlab.callbacks.MetricsSemanticCallback
     init_args:
       name: mask
+      threshold: 0.5
   fast_dev_run: false
   max_epochs: 100
   min_epochs: null
@@ -86,18 +87,13 @@ data:
         dataset:
           class_path: pytorchlab.datasets.SegmentationDataset
           init_args:
-            root: dataset/Birds&Insects
-            images: dataset/Birds&Insects/yaml/birdsDataset1_images.yaml
-            segmentations: dataset/Birds&Insects/yaml/birdsDataset1_segmentations.yaml
+            root: dataset/ISBI_2012/train
+            images: images
+            segmentations: label
             transform:
               class_path: torchvision.transforms.Compose
               init_args:
                 transforms:
-                - class_path: torchvision.transforms.CenterCrop
-                  init_args:
-                    size:
-                    - 640
-                    - 640
                 - class_path: torchvision.transforms.ToTensor
             target_transform: null
         split: 0.2
@@ -109,42 +105,38 @@ data:
         dataset:
           class_path: pytorchlab.datasets.SegmentationDataset
           init_args:
-            root: dataset/Birds&Insects
-            images: dataset/Birds&Insects/yaml/birdsDataset1_images.yaml
-            segmentations: dataset/Birds&Insects/yaml/birdsDataset1_segmentations.yaml
+            root: dataset/ISBI_2012/train
+            images: images
+            segmentations: label
             transform:
               class_path: torchvision.transforms.Compose
               init_args:
                 transforms:
-                - class_path: torchvision.transforms.CenterCrop
-                  init_args:
-                    size:
-                    - 640
-                    - 640
                 - class_path: torchvision.transforms.ToTensor
             target_transform: null
         split: 0.2
         seed: 42
         train: false
     test_datasets:
-      class_path: pytorchlab.datasets.SegmentationDataset
+      class_path: pytorchlab.utils.data.SplitDataset
       init_args:
-        root: dataset/Birds&Insects
-        images: dataset/Birds&Insects/yaml/birdsDataset2_images.yaml
-        segmentations: dataset/Birds&Insects/yaml/birdsDataset2_segmentations.yaml
-        transform:
-          class_path: torchvision.transforms.Compose
+        dataset:
+          class_path: pytorchlab.datasets.SegmentationDataset
           init_args:
-            transforms:
-            - class_path: torchvision.transforms.CenterCrop
+            root: dataset/ISBI_2012/train
+            images: images
+            segmentations: label
+            transform:
+              class_path: torchvision.transforms.Compose
               init_args:
-                size:
-                - 640
-                - 640
-            - class_path: torchvision.transforms.ToTensor
-        target_transform: null
+                transforms:
+                - class_path: torchvision.transforms.ToTensor
+            target_transform: null
+        split: 0.2
+        seed: 42
+        train: false
     predict_datasets: null
-    batch_size: 4
+    batch_size: 1
     num_workers: 4
     pin_memory: true
     drop_last: false
@@ -153,7 +145,7 @@ data:
 model:
   class_path: pytorchlab.experiments.unet.UNetModule
   init_args:
-    in_channels: 3
-    out_channels: 1
+    in_channels: 1
+    num_classes: 1
     bilinear: false
     lr: 0.0001
