--- a/config/unet/pascal-voc2012.yaml
+++ b/config/unet/pascal-voc2012.yaml
@@ -41,9 +41,10 @@ trainer:
       value_range: null
       scale_each: false
       pad_value: 0.0
-  - class_path: pytorchlab.callbacks.MetricsSegmentationCallback
+  - class_path: pytorchlab.callbacks.MetricsSemanticCallback
     init_args:
       name: mask
+      threshold: 0.5
   fast_dev_run: false
   max_epochs: 100
   min_epochs: null
@@ -193,5 +194,6 @@ model:
   class_path: pytorchlab.experiments.unet.UNetModule
   init_args:
     in_channels: 3
-    out_channels: 21
+    num_classes: 21
+    bilinear: false
     lr: 0.0001
