--- a/exps/pix2pix/configs/facades.yaml
+++ b/exps/pix2pix/configs/facades.yaml
@@ -80,7 +80,7 @@ data:
     train_datasets:
       class_path: pytorchlab.datasets.ImageGenerationDataset
       init_args:
-        root: dataset/facades/train
+        root: datasets/facades/train
         images: A
         generations: B
         transform:
@@ -100,7 +100,7 @@ data:
     val_datasets:
       class_path: pytorchlab.datasets.ImageGenerationDataset
       init_args:
-        root: dataset/facades/test
+        root: datasets/facades/test
         images: A
         generations: B
         transform:
@@ -120,7 +120,7 @@ data:
     test_datasets:
       class_path: pytorchlab.datasets.ImageGenerationDataset
       init_args:
-        root: dataset/facades/test
+        root: datasets/facades/test
         images: A
         generations: B
         transform:
