feat(cli): pytorchlab
python main.py -> pytorchlab

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,3 +49,6 @@ format = { composite = [
     "isort {args}",
     "black {args}",
 ] }
+
+[project.scripts]
+pytorchlab = "pytorchlab.utils.cli:cli"
