--- a/exps/cyclegan/configs/horse2zebra.yaml
+++ b/exps/cyclegan/configs/horse2zebra.yaml
@@ -39,7 +39,7 @@ trainer:
       - []
       batch_idx:
       - 0
-      show_epoch: false
+      show_epoch: true
       nrow: 8
       padding: 2
       normalize: false
@@ -47,7 +47,7 @@ trainer:
       scale_each: false
       pad_value: 0.0
   fast_dev_run: false
-  max_epochs: 1000
+  max_epochs: 200
   min_epochs: null
   max_steps: -1
   min_steps: null
@@ -93,6 +93,17 @@ data:
           init_args:
             transforms:
             - class_path: pytorchlab.transforms.ImageRGB
+            - class_path: torchvision.transforms.Resize
+              init_args:
+                size:
+                - 287
+                - 287
+                interpolation: 3
+                max_size: null
+                antialias: true
+            - class_path: torchvision.transforms.RandomHorizontalFlip
+              init_args:
+                p: 0.5
             - class_path: torchvision.transforms.ToTensor
         target_transform: null
         use_random: true
@@ -107,6 +118,17 @@ data:
           init_args:
             transforms:
             - class_path: pytorchlab.transforms.ImageRGB
+            - class_path: torchvision.transforms.Resize
+              init_args:
+                size:
+                - 287
+                - 287
+                interpolation: 3
+                max_size: null
+                antialias: true
+            - class_path: torchvision.transforms.RandomHorizontalFlip
+              init_args:
+                p: 0.5
             - class_path: torchvision.transforms.ToTensor
         target_transform: null
         use_random: true
@@ -121,11 +143,22 @@ data:
           init_args:
             transforms:
             - class_path: pytorchlab.transforms.ImageRGB
+            - class_path: torchvision.transforms.Resize
+              init_args:
+                size:
+                - 287
+                - 287
+                interpolation: 3
+                max_size: null
+                antialias: true
+            - class_path: torchvision.transforms.RandomHorizontalFlip
+              init_args:
+                p: 0.5
             - class_path: torchvision.transforms.ToTensor
         target_transform: null
         use_random: true
     predict_datasets: null
-    batch_size: 8
+    batch_size: 4
     num_workers: 4
     pin_memory: true
     drop_last: false
@@ -162,8 +195,7 @@ model:
         - 64
         - 128
         - 256
-        - 128
-        - 64
+        - 512
     discriminator_b:
       class_path: pytorchlab.experiments.cyclegan.NlayerDiscriminator
       init_args:
@@ -172,8 +204,7 @@ model:
         - 64
         - 128
         - 256
-        - 128
-        - 64
+        - 512
     criterion_g:
       class_path: pytorchlab.experiments.cyclegan.criterions.GeneratorLoss
       init_args:
@@ -242,16 +273,22 @@ model:
         differentiable: false
         fused: null
     lr_g:
-      class_path: torch.optim.lr_scheduler.ConstantLR
+      class_path: torch.optim.lr_scheduler.LambdaLR
       init_args:
-        factor: 1.0
-        total_iters: 5
+        lr_lambda:
+          class_path: pytorchlab.experiments.cyclegan.LambdaLR
+          init_args:
+            n_epochs: 200
+            decay_start_epoch: 100
         last_epoch: -1
         verbose: deprecated
     lr_d:
-      class_path: torch.optim.lr_scheduler.ConstantLR
+      class_path: torch.optim.lr_scheduler.LambdaLR
       init_args:
-        factor: 1.0
-        total_iters: 5
+        lr_lambda:
+          class_path: pytorchlab.experiments.cyclegan.LambdaLR
+          init_args:
+            n_epochs: 200
+            decay_start_epoch: 100
         last_epoch: -1
         verbose: deprecated
